--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/abouscss.css">
     <link rel="stylesheet" href="css/fonts.css">
     <title>Prática final CSS y HTML</title>
 </head>
@@ -42,7 +42,25 @@
     </header>
     <main>
         <section>
-            
+            <div class="container">
+                <div>
+                    <h1>NIKE</h1>
+                    <h3>La empresa fue fundada el 20 de enero de 1964 como Blue Ribbon Sports por Bill J. Bowerman y Philip H. Knight,6 y se convirtió oficialmente en Nike el 30 de mayo de 1971.</h3>
+                </div>
+            </div>
+            <div class="container">
+                <div>
+                    <h1>MISION</h1>
+                    <h3>Traer la inspiración y la innovación para cada atleta en el mundo</h3>
+                </div>
+            </div>
+            <div class="container">
+                <div>
+                    <h1>IMAGEN CORPORATIVA</h1>
+                    <h3>Percepción y experiencias interpretadas por el público: Impacto - Profundidad - Memoria</h3>
+                    <h2>JUST DO IT</h2>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
