--- a/services.html
+++ b/services.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="./css/servicescss.css">
     <link rel="stylesheet" href="css/fonts.css">
     <title>Prática final CSS y HTML</title>
 </head>
@@ -41,7 +40,66 @@
         </div>
     </header>
     <main>
-
+        <section>
+            <div class="container">
+                <div>
+                    <figure>
+                        <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/s6dp2gck3oukxj9csz5y/air-max-270-mens-shoes-KkLcGR.png" alt="">
+                    </figure>
+                    <h3 class="bestseller">Best Seller</h3>
+                    <h3 class="gray">Nike Air Max 270</h3>
+                    <h3 class="gray">Men's shoes</h3>
+                    <h3>$150</h3>
+                </div>
+                <div>
+                    <figure>
+                        <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/xafjtunb69j40gagoyyc/air-max-270-womens-shoes-Pgb94t.png" alt="">
+                    </figure>
+                    <h3 class="bestseller">Best Seller</h3>
+                    <h3 class="gray">Nike Air Max 270</h3>
+                    <h3 class="gray">Women's shoes</h3>
+                    <h3>$150</h3>
+                </div>
+                <div>
+                    <figure>
+                        <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/f390df4e-c365-42b9-b795-eb58dc3448b8/air-max-270-big-kids-shoe-HbtNX3.png" alt="">
+                    </figure>
+                    <h3 class="bestseller">Best Seller</h3>
+                    <h3 class="gray">Nike Air Max 270</h3>
+                    <h3 class="gray">Big Kid's shoe</h3>
+                    <h3>$120</h3>
+                </div>
+            </div>
+            <div class="container">
+                <div>
+                    <figure>
+                        <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/30d88240-c2ab-4e87-b3bd-27fcda597485/air-max-270-little-kids-shoe-RStNgd.png" alt="">
+                    </figure>
+                    <h3 class="bestseller">Best Seller</h3>
+                    <h3 class="gray">Nike Air Max 270</h3>
+                    <h3 class="gray">Little Kid's Shoe</h3>
+                    <h3>$100</h3>
+                </div>
+                <div>
+                    <figure>
+                        <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/e93f73fc-0673-427f-9d6c-f08442f9036f/air-max-270-baby-toddler-shoes-ch3X2c.png" alt="">
+                    </figure>
+                    <h3 class="bestseller">Best Seller</h3>
+                    <h3 class="gray">Nike Air Max 270</h3>
+                    <h3 class="gray">Baby/Toddler Shoe</h3>
+                    <h3>$70</h3>
+                </div>
+                <div>
+                    <figure>
+                        <img src="https://static.nike.com/a/images/c_limit,w_592,f_auto/t_product_v1/962e8628-23d9-4bd9-898b-85d9420e03a2/air-max-pre-day-lx-mens-shoes-dzLzcl.png" alt="">
+                    </figure>
+                    <h3 class="bestseller">Best Seller</h3>
+                    <h3 class="gray">Nike Air Max Pre-Day XL</h3>
+                    <h3 class="gray">Men's shoes</h3>
+                    <h3>$140</h3>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div>
