--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="aboutus.html">About Us</a></li>
+                        <li><a href="/aboutus.html">About Us</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="ptd.html">PTD</a></li>
                         <li><a href="tyc.html">TyC</a></li>
