--- a/tyc.html
+++ b/tyc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/tyc.css">
+    <link rel="stylesheet" href="css/tyccss.css">
     <link rel="stylesheet" href="css/fonts.css">
     <title>Prática final CSS y HTML</title>
 </head>
@@ -18,9 +18,9 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="aboutus.html">About Us</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="services.html">Productos</a></li>
+                        <li><a href="aboutus.html">Acerca de nosotros</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
                         <li><a href="ptd.html">PTD</a></li>
                         <li><a href="tyc.html">TyC</a></li>
                     </ul>
@@ -42,7 +42,10 @@
     </header>
     <main>
         <section>
-            
+            <div class="container">
+                <h1>Términos y condiciones</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis necessitatibus suscipit expedita tempore cum placeat hic minima delectus eos. Enim inventore ex consequuntur, nam porro libero quidem, placeat aperiam earum dolor doloribus quam mollitia sequi cumque numquam odit id molestias. Illum repudiandae explicabo harum perspiciatis animi. Voluptate eius voluptas sit voluptatibus nihil molestiae ut, sapiente, doloremque a accusantium vero similique placeat quaerat vel excepturi molestias aliquam sequi totam minus nam recusandae veritatis beatae. A quae nulla dolorum eaque deserunt cum veniam, ipsam ipsum recusandae error quas vel distinctio? Beatae quaerat aliquam perferendis animi delectus eius illo, labore laboriosam iure possimus tempora qui aspernatur velit, omnis soluta eaque minus accusamus! Magni officia debitis velit voluptas facilis dolores quaerat quis? Ipsam aliquam impedit facere accusantium animi nesciunt molestias assumenda sint ea, omnis, consectetur corrupti voluptates mollitia atque ad eius est. Nihil magni numquam saepe deleniti doloremque illum aspernatur ipsam velit ut corporis dolore, molestiae nulla ipsum aliquam sint suscipit explicabo. Nisi ad delectus illo, odit eaque ex fuga fugit facere suscipit quam ipsam! Mollitia ad suscipit voluptates, laboriosam harum pariatur delectus fugit repellat. Esse praesentium, velit eligendi voluptates voluptas dolores odit dignissimos nesciunt aliquid! Et, beatae similique fugit natus blanditiis iusto at quibusdam voluptate, laudantium commodi praesentium unde quisquam. Eligendi esse unde illo cupiditate excepturi non earum ad facilis, totam neque quos, maiores sed repellat blanditiis quasi aut nemo incidunt! Aliquid rerum numquam corrupti voluptatibus eum, ipsam quis facere, quas maiores est molestias aut, eveniet voluptatum! Incidunt, doloremque? Esse ullam temporibus fugiat eius, sint error possimus facilis itaque id consequuntur laborum impedit placeat voluptatibus pariatur beatae, amet qui! Numquam eius aliquid modi culpa voluptate, aliquam eveniet. Delectus, quas aperiam. Illum suscipit blanditiis incidunt. Aspernatur accusamus praesentium blanditiis cumque. Minima, rem, laboriosam modi illum veritatis deleniti natus at nulla repellendus harum quia, quis consectetur voluptas maxime laudantium ipsa. Dolore ipsa facere, quaerat eligendi in a placeat quibusdam itaque, ullam provident consequatur laudantium exercitationem explicabo distinctio fugit! Ab sit repellendus accusantium iure laboriosam quam tempore mollitia itaque recusandae ratione laudantium, earum quo, ex modi nam similique! Quis debitis laudantium nulla soluta corporis numquam ipsam, mollitia labore, ratione id necessitatibus velit veritatis enim? Cupiditate, omnis neque rem error culpa, voluptate, nemo similique dolorem totam sit perferendis minima! Perferendis magnam quasi expedita animi, odit, accusantium ad architecto quia cumque eaque magni voluptatum assumenda. Illum ullam beatae recusandae assumenda eum dolorem consequuntur, sit saepe dignissimos atque. Sint?</h3>
+            </div>
         </section>
     </main>
     <footer>
