--- a/login-form/login.html
+++ b/login-form/login.html
@@ -18,9 +18,9 @@
                 <nav>
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="../services.html">Services</a></li>
-                        <li><a href="../aboutus.html">About Us</a></li>
-                        <li><a href="../contact.html">Contact</a></li>
+                        <li><a href="../services.html">Servicios</a></li>
+                        <li><a href="../aboutus.html">Acerca de nosotros</a></li>
+                        <li><a href="../contact.html">Contacto</a></li>
                         <li><a href="../ptd.html">PTD</a></li>
                         <li><a href="../tyc.html">TyC</a></li>
                     </ul>
